[T-8] cart service added

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # compiled output
 /dist
 /node_modules
+*.js
+!jest.config.js
+*.d.ts
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
 
 # Logs
 logs
