[T-8] fixed nestjs integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "esModuleInterop": true
   },
   "exclude": [
     "node_modules",
