--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc && nest build",
+    "build": "tsc && nest build --webpack",
     "cdk": "cdk",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -28,9 +28,9 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.3",
+    "@vendia/serverless-express": "^4.12.6",
     "aws-cdk-lib": "2.110.1",
     "aws-lambda": "^1.0.7",
-    "aws-serverless-express": "^3.4.0",
     "constructs": "^10.0.0",
     "helmet": "^7.1.0",
     "passport": "^0.6.0",
@@ -46,12 +46,13 @@
     "@nestjs/cli": "^10.0.3",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.3",
+    "@types/aws-lambda": "^8.10.130",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.2",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
-    "@types/supertest": "^2.0.12",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "5.60.0",
     "@typescript-eslint/parser": "5.60.0",
     "aws-cdk": "2.110.1",
