--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.3",
+    "@nestjs/typeorm": "^10.0.1",
     "@vendia/serverless-express": "^4.12.6",
     "aws-cdk-lib": "2.110.1",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
+    "dotenv": "^16.3.1",
     "helmet": "^7.1.0",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
@@ -40,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "source-map-support": "^0.5.21",
+    "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
