[Task-8] Integration with SQL Database (#1)
* [T-8] cart service added

* [T-8] added sql scripts

* [T-8] 8.2 screenshots added

* [T-8] fixed nestjs integration

* [T-8] added rds

* [T-8] fixed main.ts

* [T-8] added cartItem

* [T-8] update and delete fixed

* [T-8] added order model

* [T-8] fixed import

* [T-8] minor changes

* [T-8] auth added

* [T-8] fixed error

* [T-8] transaction added

* [T-8] minor fix

* [T-8] modified main file

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "tsc && nest build --webpack",
+    "cdk": "cdk",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -27,27 +28,38 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.3",
-    "helmet": "^7.0.0",
+    "@nestjs/typeorm": "^10.0.1",
+    "@vendia/serverless-express": "^4.12.6",
+    "aws-cdk-lib": "2.110.1",
+    "aws-lambda": "^1.0.7",
+    "constructs": "^10.0.0",
+    "dotenv": "^16.3.1",
+    "helmet": "^7.1.0",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "source-map-support": "^0.5.21",
+    "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.3",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.3",
+    "@types/aws-lambda": "^8.10.130",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.2",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
-    "@types/supertest": "^2.0.12",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "5.60.0",
     "@typescript-eslint/parser": "5.60.0",
+    "aws-cdk": "2.110.1",
+    "esbuild": "^0.19.10",
     "eslint": "8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
