--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # compiled output
 /dist
 /node_modules
+!jest.config.js
+*.d.ts
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
 
 # Logs
 logs
