--- a/.dockerignore
+++ b/.dockerignore
@@ -2,12 +2,13 @@
 dist
 # npm install output
 node_modules
-# non-applicable git, lambda, config and other files
-lib
-bin
+# unnessecary folders
 screenshots
 scripts
 test
+# lambda and other config files
+lib
+bin
 .git
 .github
 .gitignore
